YelpCamp/v6/readme.md

#YelpCamp

* Add Landing Page
* Add Campgrounds Page that lists all campgrounds


Each Campground has:
	* Name
	* Image
	* 

#Layout and Basic Styling
* Create out header and footer partials
* Add in Bootstrap

#Add Mongoose
* Install and configure Mongoose
* Setup campground model
*  Use campground model inside of our routes

#Show Page
* Review the RESTful routes we've seen so far
*  Add description to our campground model
*   Show db.collection.drop()
*   Add a show route/template

RESTFUL ROUTES

name---url/path/--VERB--Desc.
====================================================
INDEX /dogs      GET   Display a list of all dog
NEW   /dogs/new  GET   Dispays form to make a new dog
CREATE /dogs     POST  Add new dog to DB
SHOW  /dogs/:id  GET   Shows more info about one dog


#Refactor Mongoose Code
* Create a models directory
* Use module.exports
* Require everything correctly!


#Add seed File
* Add a seeds.js file
* Run the seeds file every time the server starts

# Add th Comment Model!!!
* Make our errors go away!!!
* Associate comments with campground show page


===
v5
===
#Comment New/Create
* Discuss nested routes
* Add the commetn new and create routes
* add the new comment form


#Style Show Page
* Add sidebar to show page
* Display comments nicely

==
v6
==
# Finish Styling Show Page
* Add public directory
* Add custom stylesheet
* 
# Add user model
* Install all packages needed for auth
*  Define User model


# Authentication - Register
* Configure Passport
* Add register routes
* Add register template

# Auth cont. Logout/Navbar
* Add logout route
* Prevent user from adding a comment if not signed in
* Add links to navbar
* Show/hide auth links correctly



